Fix browser CORS policy conflict by removing @CrossOrigin from controllers